# cookietop

./: .gitignore  Makefile  README.md  alembic.ini  cookie_both.yml  cookie_dynamo.yml  cookie_minimal.yml  cookie_none.yml  cookie_rds.yml  cookiecutter.json  docker-compose.yml  full_ci_tests.sh  mypy.ini  pyproject.toml  release.config.js  setup.cfg  test.toml
alembic/: env.py
{{cookiecutter.project_name_slug}}/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  env-development.toml  env-production.toml  env-staging.toml  local.env  local.json  mypy.ini  pyproject.toml  pytest.ini  setup.cfg  start_api.cmd  template.yml
{{cookiecutter.project_name_slug}}/.devcontainer/: devcontainer.json  docker-compose.yml
{{cookiecutter.project_name_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_name_slug}}/.github/workflows/: deploy.yml  pull_request.yml  push_develop.yml  tests.yml
{{cookiecutter.project_name_slug}}/.run/: Build Artifacts.run.xml  Create Requirements.run.xml  Run All Tests.run.xml  Run Deps.run.xml  Run SAM Api.run.xml  [Local] Run Health-Check.run.xml
{{cookiecutter.project_name_slug}}/state_machine/: demo_machine.asl.json
{{cookiecutter.project_name_slug}}/tests/: conftest.py  test_document.py  test_document_schema.py  test_handler.py  test_sentry.py  test_step_functions.py  test_{{cookiecutter.model_name_slug}}_document.py
{{cookiecutter.project_name_slug}}/tests/fixtures/: accept_iam_authorization.json
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/: __init__.py  indexes.py  models.py  schemas.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/application/: __init__.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/application/handlers/: __init__.py  create_{{cookiecutter.model_name_slug}}.py  delete_{{cookiecutter.model_name_slug}}.py  health.py  retrieve_{{cookiecutter.model_name_slug}}.py  start_demo_machine.py  update_{{cookiecutter.model_name_slug}}.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/application/schemas/: {{cookiecutter.model_name_slug}}_document_schema.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/application/types/: handler_response.py  status_code.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/enterprise/: __init__.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/enterprise/helpers/: get_now.py  get_uuid.py  only_numbers.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/enterprise/models/: {{cookiecutter.model_name_slug}}_document.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/enterprise/types/: exceptions.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/handlers/: __init__.py  authorize_{{cookiecutter.model_name_slug}}.py  create_{{cookiecutter.model_name_slug}}.py  delete_{{cookiecutter.model_name_slug}}.py  health.py  retrieve_{{cookiecutter.model_name_slug}}.py  start_demo_machine.py  update_{{cookiecutter.model_name_slug}}.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/helpers/: exceptions.py  get_now.py  get_uuid.py  handler_response.py  status_code.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/interface/: __init__.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/interface/aws/: handler_step_function.py  handler_view.py  policy_generator.py  request.py  s3.py  sherlock.py  step_functions.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/interface/initializers/: nosql.py  sentry.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.project_name_slug}}/machines/demo/: __init__.py  find_{{cookiecutter.model_name_slug}}_step.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  Makefile  README.md  alembic.ini  docker-compose.yml  env-development.toml  env-production.toml  env-staging.toml  local.env  local.json  mypy.ini  pyproject.toml  release.config.js  setup.cfg  template.yml
{{cookiecutter.project_slug}}/.github/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
{{cookiecutter.project_slug}}/.github/workflows/: deploy.yml  tests.yml
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/migrations/versions/: 190deae4199b_first_commit.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_authorization.py  test_document.py  test_document_schema.py  test_entities.py  test_handler.py  test_model.py  test_model_schema.py  test_rule_document.py  test_rule_model.py  test_sentry.py  test_step_functions.py  test_{{cookiecutter.domain_slug}}_document.py
{{cookiecutter.project_slug}}/tests/factories/: documents.py  entities.py  models.py
{{cookiecutter.project_slug}}/tests/fixtures/: accept_iam_authorization.json
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/: __init__.py
{{cookiecutter.project_slug}}/{{ cookiecutter.project_slug }}/initializers/: sentry.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/application/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/application/handlers/: __init__.py  create_{{cookiecutter.domain_slug}}.py  health.py  (+3 more)
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/enterprise/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/entities/: __init__.py  service.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/handlers/: health.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/helpers/: decorators.py  request.py  sherlock.py  types.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/initializers/: logger.py  sentry.py  sql.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/interface/: __init__.py
(+62 files in other folders)
