[tool.stela]
default_environment = "test"
config_file_extension = "TOML"

[tool.pytest]
addopts = '--pydocstyle'

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | node_modules
  )/
)
'''

[tool.poetry]
name = "cookietop"
version = "0.1.0"
description = "This project contains all boilerplate you need to create a new microservice."
authors = ["Chris Maillefaud <chrismaillefaud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arrow = "*"
aws_lambda_context = "*"
loguru = "*"
marshmallow = "*"
marshmallow_enum = "*"
marshmallow-pynamo-db = "*"
pynamodb = "*"
pynamodb-attributes = "*"
sentry-sdk = "*"
stela = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
aws-sam-cli = {version=">=0.52", markers="platform_system != 'Windows'"}
boto3-stubs = "*"
black = {version = "*", allow-prereleases = true}
factory_boy = "*"
freezegun = "*"
ipdb = "*"
pre-commit = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-freezegun = "*"
pytest-mock = "*"
pytest-mypy = "*"
pytest-pydocstyle = "*"
pytest-watch = "*"
pytest-xdist ="*"
wheel = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"