[tool.stela]
use_environment_layers = true
default_environment = "develop"
show_logs = false

[environment]
project.log_level = "INFO"
project.capacity.read = 1
project.capacity.write = 1
project.sentry_dsn = ""
project.allow_origin = "*"
project.name = "my_test_microservice"
project.table_name = "MyTestMicroservice-develop-MyModelDocument"

[tool.pytest]
addopts = '--pydocstyle'

[tool.black]
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | node_modules
  )/
)
'''

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m pip install -U poetry && poetry build"

[tool.poetry]
name = "cookietop"
version = "0.1.0"
description = "This project contains all boilerplate you need to create a new microservice."
authors = ["Chris Maillefaud <chrismaillefaud@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
arrow = "*"
aws_lambda_context = "*"
loguru = "*"
marshmallow = "*"
marshmallow-pynamo-db = "*"
marshmallow_enum = "*"
pynamodb = "*"
pynamodb-attributes = "*"
sentry-sdk = "*"
stela = "*"
typing_extensions = "*"
stringcase = "*"
PyJWT = "*"
cookiecutter = "*"

[tool.poetry.dev-dependencies]
boto3 = "*"
boto3-stubs = "*"
black = {version = "*", allow-prereleases = true}
factory_boy = "*"
freezegun = "*"
ipdb = "*"
pre-commit = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-freezegun = "*"
pytest-mock = "*"
pytest-mypy = "*"
pytest-watch = "*"
pytest-xdist ="*"
wheel = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"