[tool.stela]
use_environment_layers = true
default_environment = "develop"
show_logs = false

[environment]
project.log_level = "INFO"
project.capacity.read = 1
project.capacity.write = 1
project.sentry_dsn = ""
project.allow_origin = "*"
project.name = "{{cookiecutter.project_name_camel}}"

[environment.develop]
project.log_level = "DEBUG"
project.table_name = "{{cookiecutter.project_name_camel}}-develop-{{ cookiecutter.model_name_camel }}Document"

[tool.coverage.report]
fail_under = 80

[tool.black]
target-version = ['{{ cookiecutter.black_target_version }}']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | dependencies
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.semantic_release]
version_variable = [
    "{{cookiecutter.project_name_slug}}/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "python -m pip install -U poetry && poetry build"

[tool.poetry]
name = "{{cookiecutter.project_name_slug}}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Chris Maillefaud <chris@megalus.com.br>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
arrow = "*"
aws_lambda_context = "*"
loguru = "*"
marshmallow = "*"
marshmallow-pynamo-db = "*"
marshmallow_enum = "*"
pynamodb = "*"
pynamodb-attributes = "*"
sentry-sdk = "*"
stela = "*"
typing_extensions = "*"
stringcase = "*"
PyJWT = "*"

[tool.poetry.dev-dependencies]
boto3 = "*"
boto3-stubs = "*"
black = {version = "*", allow-prereleases = true}
factory_boy = "*"
freezegun = "*"
ipdb = "*"
pre-commit = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-freezegun = "*"
pytest-mock = "*"
pytest-mypy = "*"
pytest-watch = "*"
pytest-xdist ="*"
wheel = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
