[tool.stela]
default_environment = "development"
config_file_extension = "TOML"
config_file_prefix = "env-"

[tool.coverage.report]
fail_under = 80

[tool.pytest]
addopts = '--pydocstyle'

[tool.black]
line-length = {{ cookiecutter.line_length }}
target-version = ['{{ cookiecutter.black_target_version }}']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | node_modules
  )/
)
'''

[tool.poetry]
name = "{{cookiecutter.project_slug}}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["Noverde <devs@noverde.com.br>"]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
arrow = "*"
aws_lambda_context = "*"
loguru = "*"
marshmallow = "*"
marshmallow_enum = "*"
marshmallow-sqlalchemy = "*"
pynamodb = "*"
python-json-logger = "*"
psycopg2 = "*"
sentry-sdk = "*"
SQLAlchemy = "*"
stela = "*"

[tool.poetry.dev-dependencies]
alembic = "*"
aws-sam-cli = {version="*", markers="platform_system != 'Windows'"}
black = {version = "*", allow-prereleases = true}
factory_boy = "*"
freezegun = "*"
ipdb = "*"
pre-commit = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-dynamodb = "*"
pytest-mock = "*"
pytest-mypy = "*"
pytest-postgresql = "*"
pytest-pydocstyle = "*"
pytest-watch = "*"
pytest-xdist ="*"
wheel = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
